# weather-station

./: .gitignore  Cargo.toml  README.md  build.sh  weather-station.uf2
.cargo/: config.toml
src/: button.rs  devices.rs  dht11.rs  display.rs  handlers.rs  http.rs  main.rs
src/devices/: dht.rs  rtc.rs
src/http/: request.rs  response.rs  router.rs  server.rs
static/: index.html
