[package]
name = "weather-station"
version = "0.2.0"
edition = "2021"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embassy-executor = { version = "0.6.2", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6", "multicast"] }
cyw43 =  { version = "0.2.0", features = ["defmt"] }
cyw43-pio = { version = "0.2.0", features = ["defmt"] }
static_cell = "2.1.0"
portable-atomic = { version = "1.5", features = ["critical-section"] }
embedded-io-async = "0.6.1"
rand_core = "0.6.4"
heapless = "0.8.0"
embassy-dht = "0.1.9"
embassy-futures = { version = "0.1.1", features = ["defmt"] }

[patch.crates-io]
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "fcbbef01cd3c5292be29b78b674f0593277545e7"}
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "fcbbef01cd3c5292be29b78b674f0593277545e7"}
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "fcbbef01cd3c5292be29b78b674f0593277545e7"}
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "fcbbef01cd3c5292be29b78b674f0593277545e7"}
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "fcbbef01cd3c5292be29b78b674f0593277545e7"}
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "fcbbef01cd3c5292be29b78b674f0593277545e7"}
embassy-time-queue-driver = { git = "https://github.com/embassy-rs/embassy", rev = "fcbbef01cd3c5292be29b78b674f0593277545e7"}
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "fcbbef01cd3c5292be29b78b674f0593277545e7"}
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "fcbbef01cd3c5292be29b78b674f0593277545e7"}
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "fcbbef01cd3c5292be29b78b674f0593277545e7"}

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
